--- a/build.gradle
+++ b/build.gradle
@@ -33,9 +33,8 @@ android {
     sourceSets {
 	    main {
 	        manifest.srcFile 'AndroidManifest.xml'
-	        aidl.srcDir 'src/sneerteam/api'
-	        java.srcDir 'src/sneerteam/snapi'
-	        res.srcDir 'res'	        
+	        aidl.srcDir 'src'
+	        java.srcDir 'src'
 	    }
 	}
 }
