--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,10 @@ repositories {
     mavenCentral()
 }
 
+configurations {
+    libs
+}
+
 dependencies {
     libs 'us.bpsm:edn-java:0.4.4'
     libs 'com.netflix.rxjava:rxjava-android:0.17.5'
