--- a/android-api/.classpath
+++ b/android-api/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/java-api"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
