--- a/java-api.tests/build.gradle
+++ b/java-api.tests/build.gradle
@@ -8,15 +8,12 @@ sourceCompatibility = 1.6
 targetCompatibility = 1.6
 
 sourceSets {
-    main {
-        java {
-            srcDir 'src'
-        }
-    }
+    main.java.srcDir 'src'
 }
 
 dependencies {
     compile project(':java-api')
+    compile 'junit:junit:4.+'
 }
 
 uploadArchives {
