--- a/java-api/build.gradle
+++ b/java-api/build.gradle
@@ -8,11 +8,7 @@ sourceCompatibility = 1.6
 targetCompatibility = 1.6
 
 sourceSets {
-    main {
-        java {
-            srcDir 'src'
-        }
-    }
+    main.java.srcDir 'src'
 }
 
 dependencies {
