--- a/java-api/build.gradle
+++ b/java-api/build.gradle
@@ -12,7 +12,7 @@ sourceSets {
 }
 
 dependencies {
-    compile 'com.netflix.rxjava:rxjava-android:0.17.5'
+    compile 'com.netflix.rxjava:rxjava-core:0.17.5'
 }
 
 uploadArchives {
