--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include 'java-api', 'java-api.tests', 'android-api', 'android.main'
+include 'java-api', 'java-api.tests', 'android-api', 'android.main', 'core'
