--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ subprojects {
 	                writer << "android.library=true\n"
 	            }
 	            def count = 0;
-	            configurations.compile.dependencies.find {it instanceof ProjectDependency}.find{it.dependencyProject.plugins.hasPlugin('android-library')}.each {
+	            configurations.compile.dependencies.findAll {it instanceof ProjectDependency}.findAll{it.dependencyProject.plugins.hasPlugin('android-library')}.each {
 	                count++
 	                def relative = Paths.get(projectDir.toURI()).relativize(Paths.get(it.dependencyProject.projectDir.toURI())).toString()
 	                writer << "android.library.reference.${count}=${relative}\n"
@@ -50,12 +50,12 @@ subprojects {
 		                    node.appendNode('classpathentry', [kind: 'src', path: 'gen'])
 
 		                    configurations.each { conf ->
-		                        conf.dependencies.find {it instanceof ExternalModuleDependency}.collect{conf.files(it)}.flatten().each { f ->
+		                        conf.dependencies.findAll {it instanceof ExternalModuleDependency}.collect{conf.files(it)}.flatten().each { f ->
 		                            node.appendNode('classpathentry', [kind: 'lib', path: f, exported: true])
 		                        }
 		                    }
 
-		                    configurations.compile.dependencies.find {it instanceof ProjectDependency}.each {
+		                    configurations.compile.dependencies.findAll {it instanceof ProjectDependency}.each {
 		                        node.appendNode('classpathentry', [kind: 'src', path: "/${it.dependencyProject.name}", exported: true])
 		                    }
 
