--- a/android.main/AndroidManifest.xml
+++ b/android.main/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
-        android:name="sneer.android.main.SneerApp"
+        android:name=".SneerSingleton"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -26,20 +26,11 @@
         </receiver>
 
         <activity
-            android:name=".ui.ManagedContactsActivity"
+            android:name=".ui.MainActivity"
             android:label="@string/title_activity_main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
-        <activity
-            android:name=".ui.ContactPickerActivity"
-            android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="sneer.intent.action.PICK_CONTACT" />
-                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
 
