move android-v4 support library from libs dir to gradle

--- a/android.main/build.gradle
+++ b/android.main/build.gradle
@@ -24,6 +24,7 @@ repositories {
 
 dependencies {
     compile 'us.bpsm:edn-java:0.4.4'
+	compile 'com.google.android:support-v4:r7'
     compile project(':android-api')
 }
 
