--- a/core/build.gradle
+++ b/core/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     compile 'org.clojure:java.jdbc:0.3.4'
     compile 'org.xerial:sqlite-jdbc:3.7.2'
     compile 'com.netflix.rxjava:rxjava-clojure:0.19.6'
+    compile 'com.cognitect:transit-clj:0.8.229'
     compile project(':java-api')
     compile project(':java-api.tests')
 }
