--- a/android.main/AndroidManifest.xml
+++ b/android.main/AndroidManifest.xml
@@ -1,24 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="sneer.android.main"
+    android:installLocation="internalOnly"
     android:versionCode="2"
-    android:versionName="1.0"
-    android:installLocation="internalOnly">
+    android:versionName="1.0" >
 
     <uses-sdk
         android:minSdkVersion="15"
         android:targetSdkVersion="19" />
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
-
-        <receiver android:name=".CloudBroadcastReceiver">
+        android:theme="@style/AppTheme" >
+        <receiver android:name=".CloudBroadcastReceiver" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
@@ -26,34 +25,37 @@
 
         <activity
             android:name=".ui.MainActivity"
-            android:label="@string/title_activity_main">
+            android:label="@string/title_activity_main" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
         <activity
             android:name=".ui.InteractionListActivity"
             android:label="@string/title_interaction_list" >
         </activity>
-        
         <activity
             android:name=".ui.InteractionActivity"
             android:label="@string/title_interaction" >
         </activity>
-
         <activity
             android:name=".ui.ProfileActivity"
             android:label="@string/title_activity_profile" />
 
         <service
-            android:exported="true"
-            android:name=".CloudService" >
+            android:name=".CloudService"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="sneer.intent.action.BIND_CLOUD_SERVICE" />
             </intent-filter>
-         </service>
+        </service>
+
+        <activity
+            android:name="sneer.android.main.ui.ProfileActivity"
+            android:label="@string/title_activity_profile" >
+        </activity>
     </application>
 
 </manifest>
