add android entry point and session for interaction api

--- a/android.main/AndroidManifest.xml
+++ b/android.main/AndroidManifest.xml
@@ -35,6 +35,11 @@
         <activity
             android:name=".ui.InteractionListActivity"
             android:label="@string/title_interaction_list" >
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <action android:name="sneer.android.main.INTERACTION_LIST" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".ui.InteractionActivity"
