add diego as developer of android-api artifact

--- a/android-api/build.gradle
+++ b/android-api/build.gradle
@@ -204,6 +204,11 @@ afterEvaluate {
 							    name 'Felipe Bueno'
 							    email 'bueno.felipe@gmail.com'
 							}
+							developer {
+							    id 'dhmendes'
+							    name 'Diego Mendes'
+							    email 'dhmendes@gmail.com'
+							}
 						}
 			        }
 			        
