--- a/android.main/build.gradle
+++ b/android.main/build.gradle
@@ -25,6 +25,7 @@ repositories {
 dependencies {
     compile 'us.bpsm:edn-java:0.4.4'
 	compile 'com.google.android:support-v4:r7'
+	compile 'org.ocpsoft.prettytime:prettytime:3.2.5.Final'
     compile project(':android-api')
 }
 
