--- a/core/build.gradle
+++ b/core/build.gradle
@@ -46,6 +46,6 @@ dependencies {
     compile 'com.netflix.rxjava:rxjava-clojure:0.19.6'
     compile 'com.cognitect:transit-clj:0.8.229'
 	compile 'com.google.guava:guava:17.0'
+    compile 'junit:junit:4.+'
     compile project(':java-api')
-    compile project(':java-api.tests')
 }
